<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/bai_01"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

        <com.amap.api.maps.MapView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">
        </com.amap.api.maps.MapView>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/one_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linemb"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:background="@drawable/shape001"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.97"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.015">

            <Button
                android:id="@+id/pbmb"
                android:layout_width="80dp"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="@string/szmb1"
                android:background="@drawable/shape002"
                android:textColor="@color/bai_01"
                android:textSize="15dp" />

        </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="190dp"
    android:orientation="vertical"
    android:background="@color/bai_01"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="1.0"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:gravity="center"
        android:textColor="@color/lv"
        android:text="@string/xzfs"
        />
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
           >
            <RelativeLayout
                android:id="@+id/rl_first_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:id="@+id/iv_first_hwyd"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/icon_hwyd_selector" />

                <TextView
                    android:id="@+id/tv_first_hwyd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_first_hwyd"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/huwai"
                    android:textColor="@drawable/text_selector_color" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_four_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:id="@+id/iv_four_qxyd"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/icon_qxyd_selector" />

                <TextView
                    android:id="@+id/tv_four_qxyd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_four_qxyd"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/qixing"
                    android:textColor="@drawable/text_selector_color" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="vertical"
            >

            <!--<ImageView-->
                <!--android:id="@+id/start_yd"-->
                <!--android:layout_width="70dp"-->
                <!--android:layout_height="70dp"-->
                <!--android:src="@drawable/start_yd" />-->
            <com.example.maps_module.Progress_start
                android:id="@+id/start_yd"
                android:layout_width="80dp"
                android:layout_height="80dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/ydmb_pb"
                android:textColor="@color/lv"
                android:textSize="12dp"
                android:gravity="center"
                />
                <TextView
                    android:id="@+id/sz_sportmb"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:textColor="@color/lv"
                    android:textSize="12dp"
                    android:text="5"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:textColor="@color/lv"
                    android:textSize="12dp"
                    android:text="@string/Kilometres"
                    android:gravity="center"
                    />
            </LinearLayout>
        </LinearLayout>
</LinearLayout>
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/tow_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/blue"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.example.maps_module.TimeDownView
            android:id="@+id/rpv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textSize="120dp"
            android:gravity="center"
            android:textColor="@color/bai_01"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </com.example.maps_module.TimeDownView>
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/third_layout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:background="@color/bai_01"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:gravity="center"
    android:orientation="horizontal"
    >
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:textColor="@color/hei"
            android:textSize="22dp"
            android:text="耗时："
            />
        <TextView
            android:id="@+id/hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00"
            android:textColor="@color/hei"
            android:textSize="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textColor="@color/hei"
            android:textSize="25dp" />
    <TextView
        android:id="@+id/mint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00"
        android:textColor="@color/hei"
        android:textSize="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=":"
        android:textColor="@color/hei"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/sec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00"
        android:textColor="@color/hei"
        android:textSize="25dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:textColor="@color/hei"
            android:textSize="22dp"
            android:text="燃烧："
            />
        <TextView
            android:id="@+id/calorie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/hei"
            android:textSize="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="千卡"
            android:textColor="@color/hei"
            android:textSize="22dp" />
    </LinearLayout>
</LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/hui"
                />
            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="运动速度(m/s)"
                        android:textSize="14dp"
                        android:textColor="@color/hei"
                        />

                    <TextView
                        android:id="@+id/speed"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:textColor="@color/hei"
                        android:text="0.00"
                        android:textSize="20dp"
                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:orientation="vertical"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    >
                    <TextView
                        android:id="@+id/zt_yd"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:gravity="center"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/lv"
                        android:text="@string/running"
                        android:textSize="15dp"
                        />

                <!--<ImageView-->
                    <!--android:id="@+id/reset_yd"-->
                    <!--android:layout_width="70dp"-->
                    <!--android:layout_height="70dp"-->
                    <!--android:src="@drawable/stop_yd" />-->
                    <com.example.maps_module.Progress_stop
                        android:id="@+id/reset_yd"
                        android:layout_width="80dp"
                        android:layout_height="80dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="运动里程(km)"
                        android:textSize="14dp"
                        android:textColor="@color/hei"
                        />

                    <TextView
                        android:id="@+id/distance"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:textColor="@color/hei"
                        android:text="0"
                        android:textSize="20dp"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <com.example.maps_module.StepLineView
                    android:id="@+id/ee"
                    android:layout_width="300dp"
                    android:layout_height="40dp">
                </com.example.maps_module.StepLineView>

            </LinearLayout>
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>